--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "author": "jiho han",
     "license": "MIT",
     "dependencies": {
-        "graphql-yoga": "^1.18.2"
+        "graphql-yoga": "^1.18.2",
+        "node-fetch": "^2.6.0"
     },
     "scripts": {
         "start": "nodemon --exec babel-node index.js"
